--- a/index.html
+++ b/index.html
@@ -858,7 +858,7 @@
 
         <div class="box">
             <a href="#" class="logo"> <i class="fas fa-shopping-cart"></i>  shopping</a>
-            <p>Enjoy online shopping through the shopping online website Shopping online through this website or online store Very good service
+            <p>hello my friends Enjoys online shopping through the shopping online website Shopping online through this website or online store Very good service
                  24-hour service in buying and selling 24-hour service in buying and selling Technical support service for the site Security of purchase and sale through the site</p>
         </div>
 
